# office-crypto

./: Cargo.toml  README.md  index.html
example/web/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
example/web/src/: index.ts
office-crypto-core/: Cargo.toml
office-crypto-core/src/: crypto.rs  lib.rs  main.rs  test.docx
office-crypto-wasm/: Cargo.toml  index.html  index.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json
office-crypto-wasm/src/: lib.rs
src/: crypto.rs  errors.rs  lib.rs  test_decrypted.docx
