[package]
name = "office-crypto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfb = "0.10.0"
cbc = { version = "0.1.2", features = ["block-padding"] }
thiserror = "1.0.61"
quick-xml = "0.31.0"
base64 = "0.22.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
aes = "0.8.4"
ecb = "0.1.2"

[lib]
